--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "test": "jest"
   },
   "keywords": [],
@@ -11,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
@@ -23,6 +27,7 @@
     "@babel/register": "^7.23.7",
     "babel-plugin-rewire": "^1.2.0",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^9.1.8",
     "nodemon": "^3.1.0",
     "supertest": "^6.3.4"
   }
