--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "mongoose-unique-validator": "^5.0.0",
+    "redis": "^4.6.14",
     "winston": "^3.13.0"
   },
   "devDependencies": {
